fix(App): Handle mobile browser navbar issues
Wrap the whole app in a fixed position element so the browser's navbar
does not cover up portions of the app, necessitating a scroll.

--- a/src/components/core/App/style.css
+++ b/src/components/core/App/style.css
@@ -1,8 +1,5 @@
 .appContent {
-  /* need a fixed height of arbitrary value
-   * so the vtk viewers don't grow too much in
-   * height when resizing. */
-  height: 0;
+  height: 100%;
   -webkit-overflow-scrolling: touch;
 }
 
